--- a/.env-prod
+++ b/.env-prod
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000
 
 DB_CONNECTION=mysql
-DB_HOST=172.17.0.2
+DB_HOST=sql9.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=ensalamento
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=sql9182083
+DB_USERNAME=sql9182083
+DB_PASSWORD=VQDf3NrFKD
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
