--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/remote": "^5.3.0",
         "mpociot/laravel-apidoc-generator": "^2.0"
     },
     "require-dev": {
